# classifyre

./: .gitignore  CLAUDE.md  Dockerfile  INVESTIGATION_PLAN.md  LICENSE  README.md  openapi.json  opencode.json  package.json  skaffold.yaml  turbo.json
apps/cli/: .gitignore  README.md  package.json  pyproject.toml
apps/cli/scripts/: generate_models.py
apps/cli/spark-warehouse/demo.db/t/: .part-00000-5d8dca94-aeed-4abf-9c71-4aaa4872700d-c000.snappy.parquet.crc  part-00000-5d8dca94-aeed-4abf-9c71-4aaa4872700d-c000.snappy.parquet
apps/cli/src/: config.py  embedding_server.py  main.py  telemetry.py
apps/cli/src/detectors/: base.py  config.py  dependencies.py
apps/cli/src/detectors/broken_links/: detector.py
apps/cli/src/detectors/content/: feature_extraction_detector.py  image_classification_detector.py  language_detector.py  object_detection_detector.py  text_classification_detector.py  toxic_detector.py
apps/cli/src/detectors/custom/: __init__.py  detector.py  extractor.py  runners.py  trainer.py
apps/cli/src/detectors/pii/: detector.py
apps/cli/src/detectors/secrets/: detector.py
apps/cli/src/detectors/threat/: code_security_detector.py  yara_detector.py
apps/cli/src/file_evaluation/: __init__.py  runner.py
apps/cli/src/models/: generated_detectors.py  generated_input.py  generated_single_asset_scan_results.py
apps/cli/src/outputs/: base.py  console.py  file.py  rest.py
apps/cli/src/pipeline/: __init__.py  content_provider.py  detector_pipeline.py  embedder.py  parsed_content_provider.py  text_artifact.py  worker_pool.py
apps/cli/src/sandbox/: runner.py
apps/cli/src/sources/: asset_metadata.py  base.py  dependencies.py  lakehouse_base.py  recipe_normalizer.py  s3_client.py  search_engine_base.py  spark_base.py  tabular_base.py  tabular_utils.py
apps/cli/src/sources/azure_blob_storage/: source.py
apps/cli/src/sources/confluence/: source.py
apps/cli/src/sources/databricks/: source.py
apps/cli/src/sources/delta_lake/: __init__.py  source.py
apps/cli/src/sources/elasticsearch/: __init__.py  source.py
apps/cli/src/sources/email/: __init__.py  source.py
apps/cli/src/sources/google_cloud_storage/: source.py
apps/cli/src/sources/google_workspace/: source.py
apps/cli/src/sources/hive/: source.py
apps/cli/src/sources/hudi/: __init__.py  source.py
apps/cli/src/sources/iceberg/: __init__.py  source.py
apps/cli/src/sources/jira/: source.py
apps/cli/src/sources/kafka/: __init__.py  source.py
apps/cli/src/sources/local_folder/: __init__.py  source.py
apps/cli/src/sources/meilisearch/: __init__.py  source.py
apps/cli/src/sources/microsoft_365/: source.py
apps/cli/src/sources/mongodb/: source.py
apps/cli/src/sources/mssql/: source.py
apps/cli/src/sources/mysql/: source.py
apps/cli/src/sources/neo4j/: source.py
apps/cli/src/sources/notion/: __init__.py  client.py  source.py
apps/cli/src/sources/object_storage/: base.py
apps/cli/src/sources/opensearch/: __init__.py  source.py
apps/cli/src/sources/oracle/: source.py
apps/cli/src/sources/postgresql/: source.py
apps/cli/src/sources/powerbi/: source.py
apps/cli/src/sources/s3_compatible_storage/: README.md  source.py
apps/cli/src/sources/sandbox/: __init__.py  source.py
apps/cli/src/sources/servicedesk/: source.py
apps/cli/src/sources/slack/: source.py
apps/cli/src/sources/snowflake/: source.py
apps/cli/src/sources/spark_catalog/: __init__.py  source.py
apps/cli/src/sources/sqlite/: source.py
apps/cli/src/sources/tableau/: source.py
apps/cli/src/sources/wordpress/: source.py
apps/cli/src/sources/youtube/: __init__.py  source.py
apps/cli/src/utils/: archive_extraction.py  dependency_groups.py  embedded_images.py  file_metadata.py  file_parser.py  file_to_images.py  legacy_office.py  resources.py  spark_runtime.py  transcription.py  uv_sync.py  video_processing.py
apps/cli/tests/: _lakehouse_fakes.py  _spark_fakes.py  test_assets_metadata_catalog.py  test_azure_blob_storage_source.py  test_base_source_attachment.py  test_base_source_sampling.py  test_config.py  test_confluence_source.py  test_custom_extractor.py  test_databricks_source.py  test_delta_lake_source.py  test_dependency_groups.py  test_elasticsearch_source.py  test_email_source.py  test_file_evaluation_runner.py  test_google_cloud_storage_source.py  test_google_workspace_source.py  test_hashing.py  test_hive_source.py  test_hudi_source.py  test_iceberg_source.py  test_jira_source.py  test_kafka_source.py  test_local_folder_source.py  test_main.py  test_meilisearch_source.py  test_microsoft_365_source.py  test_mongodb_source.py  test_mssql_source.py  test_mysql_source.py  test_neo4j_source.py  test_notion_source.py  test_opensearch_source.py  test_oracle_source.py  test_outputs.py  test_postgresql_source.py  test_powerbi_source.py  test_recipe_normalizer.py  test_s3_compatible_storage_source.py  test_sampling_automatic.py  (+15 more)
apps/cli/tests/detectors/: conftest.py  test_base_detector.py  test_custom_detector_examples_runtime.py  test_detector_catalog_commercial.py  test_detector_pipeline_types.py  test_detector_schema_examples.py  test_detector_types.py  test_phase2_detectors.py  test_registry.py
apps/cli/tests/detectors/broken_links/: test_broken_links_detector.py
apps/cli/tests/detectors/content/: test_feature_extraction_detector.py  test_image_classification_detector.py  test_object_detection_detector.py  test_text_classification_detector.py  test_toxic_detector.py
apps/cli/tests/detectors/custom/: conftest.py  test_gliner2_classification.py  test_invoice_extraction.py  test_llm_runner.py  test_pipeline_integration.py  test_regex_runner.py  test_runner_hardening.py  test_transformer_runners.py
apps/cli/tests/detectors/pii/: conftest.py  (+4 more)
apps/cli/tests/pipeline/: test_detector_outcomes.py  test_detector_pipeline.py  test_embedder.py  test_worker_pool.py
apps/cli/tests/utils/: test_archive_extraction.py  test_embedded_images.py  test_file_metadata.py  test_file_parser.py  test_file_to_images.py  test_legacy_office.py  test_transcription.py  test_video_processing.py
(+1003 files in other folders)
