[project]
name = "classifyre-cli"
version = "0.4.39"
description = "Classifyre CLI — scan and classify unstructured data sources"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
keywords = ["data", "metadata", "ingestion", "unstructured", "pii", "secrets"]
dependencies = [
    "classifyre-schemas",
    "jsonschema>=4.26.0",
    "pydantic>=2.13.4",
    "email-validator>=2.3.0",
    "requests>=2.34.2",
    "en-core-web-sm",
    "beautifulsoup4>=4.12.0",
    "lxml>=6.1.1",
]

[tool.uv.sources]
# Local editable install for development — ignored when published to PyPI
classifyre-schemas = { path = "../../packages/schemas", editable = true }
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }
# CPU-only torch on Linux. The default PyPI Linux wheels bundle the full NVIDIA
# CUDA stack (~5-7 GB) which is dead weight on our CPU-only CLI jobs (no GPU
# requested). Pull torch/torchvision from the PyTorch CPU index on Linux so the
# nvidia-* packages drop out entirely. macOS/other platforms already use CPU
# wheels from PyPI. (A GPU image can override this in the future.)
torch = [{ index = "pytorch-cpu", marker = "sys_platform == 'linux'" }]
torchvision = [{ index = "pytorch-cpu", marker = "sys_platform == 'linux'" }]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[project.scripts]
classifyre = "src.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "ruff>=0.15.13",
    "mypy>=1.13.0",
    "datamodel-code-generator>=0.57.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=0.24.0",
    # Real SQL engine for the lakehouse source tests (sampling over Parquet).
    "duckdb>=1.1.0",
]
privacy = [
    "presidio-analyzer>=2.2.362",
    "spacy>=3.8.14",
    # phonenumbers 9.x introduced lazy region loading via __import__ which fails
    # mid-run in frozen/venv contexts. 8.x eagerly loads all data at import time,
    # avoiding ModuleNotFoundError during Presidio phone number analysis.
    "phonenumbers>=8.13.0,<10.0.0",
    "numpy>=1.26.0,<3.0.0",
]
security = [
    "detect-secrets>=1.5.0",
    "bandit>=1.9.4",
    "yara-python>=4.5.4",
]
threat-ml = [
    "transformers>=4.50.0,<6.0.0",
    "sentencepiece>=0.2.1",
    "torch>=2.12.0",
]
content = [
    "nudenet>=3.4.2",
    "transformers>=4.50.0,<6.0.0",
    "onnxruntime>=1.26.0",
    "torch>=2.12.0",
    "pillow>=12.2.0",
    "sentencepiece>=0.2.1",
]
quality = [
    "datasketch>=1.10.0",
    "sentence-transformers>=5.5.0",
    "textstat>=0.7.13",
    "transformers>=4.50.0,<6.0.0",
    "torch>=2.12.0",
    "sentencepiece>=0.2.1",
]
classification = [
    "transformers>=4.50.0,<6.0.0",
]
custom = [
    "transformers>=4.50.0,<6.0.0",
    "torch>=2.12.0",
    "pillow>=12.2.0",
    "timm>=1.0.27",
    "setfit>=1.1.3",
    "datasets>=4.8.5",
    "scikit-learn>=1.7.2",
    "gliner2>=1.3.1",
    "sentence-transformers>=5.5.0",
    # Direct declaration so the [tool.uv.sources] cpu-index pin applies (timm
    # pulls torchvision transitively; see the ocr group note).
    "torchvision>=0.27.0",
]
regex = [
    "google-re2>=1.1",
]
llm = [
    "litellm>=1.86.2",
    # Pure-wheel PDF renderer (permissive license, no system binaries) used to
    # rasterise PDF pages to images for vision-capable LLM detectors.
    "pypdfium2>=4.30.0",
    "pillow>=12.2.0",
]
detectors = [
    { include-group = "file-processing" },
    { include-group = "privacy" },
    { include-group = "security" },
    { include-group = "threat-ml" },
    { include-group = "content" },
    { include-group = "quality" },
    { include-group = "classification" },
    { include-group = "custom" },
    { include-group = "regex" },
    { include-group = "llm" },
    { include-group = "transcription" },
]
file-processing = [
    "filetype>=1.2.0",
    "pdfplumber>=0.11.9",
    "python-docx>=1.2.0",
    "openpyxl>=3.1.5",
    "chardet>=7.4.3",
    "pyarrow>=18.0.0",
    # Table layer: Iceberg metadata resolution + SQL over Parquet without Spark.
    "pyiceberg>=0.9.0",
    "duckdb>=1.1.0",
]
transcription = [
    # CPU audio/video transcription. faster-whisper decodes media via bundled
    # PyAV (no system ffmpeg required) and runs ctranslate2 for inference.
    "faster-whisper>=1.1.0",
]
ocr = [
    { include-group = "file-processing" },
    "docling>=2.94.0",
    "rapidocr-onnxruntime>=1.4.0",
    # torchvision is a transitive dep of docling-ibm-models, but [tool.uv.sources]
    # index pins only apply to dependencies declared directly in this project.
    # Without this entry uv resolves the CUDA-built PyPI wheel, which fails to
    # import against torch+cpu (surfaces as transformers "Could not import
    # module 'AutoProcessor'").
    "torchvision>=0.27.0",
]
postgresql = [
    "psycopg2-binary>=2.9.12,<3.0.0",
]
mysql = [
    "pymysql>=1.2.0,<2.0.0",
]
mssql = [
    "pymssql>=2.3.4,<3.0.0",
]
oracle = [
    "oracledb>=2.5.1,<5.0.0",
]
hive = [
    "pyhive>=0.7.0,<1.0.0",
    "thrift>=0.16.0,<1.0.0",
    "thrift-sasl>=0.4.3,<1.0.0",
    "pure-sasl>=0.6.2,<1.0.0",
]
databricks = [
    "databricks-sql-connector>=4.2.6,<5.0.0",
    "pyarrow>=24.0.0",
]
snowflake = [
    "snowflake-connector-python>=4.5.0,<5.0.0",
]
mongodb = [
    "pymongo>=4.17.0,<5.0.0",
]
neo4j = [
    "neo4j>=5.0.0,<7.0.0",
]
tableau = [
    "tableauserverclient>=0.38,<1.0.0",
]
s3-compatible-storage = [
    "boto3>=1.43.10,<2.0.0",
]
azure-blob-storage = [
    "azure-storage-blob>=12.29.0,<13.0.0",
    "azure-identity>=1.25.3,<2.0.0",
]
google-cloud-storage = [
    "google-cloud-storage>=3.10.1,<4.0.0",
]
email = [
    "imap-tools>=1.10.0,<2.0.0",
]
youtube = [
    "yt-dlp>=2025.1.0",
    "youtube-transcript-api>=1.0.0",
]
delta-lake = [
    # Pure-Python/Rust Delta reader (delta-rs) — no Spark, no JVM. Table metadata
    # and data-file lists come from deltalake; rows are sampled through DuckDB
    # (file-processing group) over the table's Parquet files.
    { include-group = "file-processing" },
    "deltalake>=0.25.0",
    "boto3>=1.43.10,<2.0.0",
]
iceberg = [
    # PyIceberg resolves table metadata and finds Parquet files without Spark;
    # DuckDB (file-processing group) samples rows from those files.
    { include-group = "file-processing" },
    "boto3>=1.43.10,<2.0.0",
]
kafka = [
    # librdkafka-based client (bundled wheels, no JVM).
    "confluent-kafka>=2.5.0",
]
otel = [
    "opentelemetry-sdk>=1.42.0",
    "opentelemetry-exporter-otlp-proto-http>=1.27.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src"]
exclude = ["scripts/", "src/models/generated_*.py"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "ARG",  # flake8-unused-arguments
    "PTH",  # flake8-use-pathlib
    "ERA",  # eradicate
    "PL",   # pylint
    "RUF",  # ruff-specific rules
]
ignore = [
    "PLR0913", # too many arguments in function definition
    "B027",    # empty method in abstract base class (used for optional hooks)
    "PLR0912", # too many branches
    "PLR0915", # too many statements
    "E501",    # line too long
    "ERA001",  # eradicate commented-out code
    "UP007",   # Use `X | Y` for type annotations
    "ARG002",  # unused method argument (common in abstract implementations)
    "PLR2004", # magic value in comparison (acceptable in tests and configs)
    "PLR0911", # too many return statements (acceptable for classification methods)
    "PLC0415", # import outside top-level (needed for lazy loading)
    "PTH123",  # open() usage (acceptable in tests)
]

[tool.ruff.lint.isort]
known-first-party = ["src", "schemas"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
disallow_untyped_defs = true
disallow_any_generics = true
no_implicit_optional = true
show_error_codes = true
plugins = ["pydantic.mypy"]
exclude = ["scripts/", ".venv/"]

[[tool.mypy.overrides]]
module = ["jsonschema.*", "requests.*", "schemas.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["bs4.*", "lxml.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "neo4j.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "cryptography.*",
    "presidio_analyzer.*",
    "spacy.*",
    "phonenumbers.*",
    "transformers.*",
    "torch.*",
    "yara.*",
    "nudenet.*",
    "detect_secrets.*",
    "detect_secrets",
    "bandit.*",
    "datasketch.*",
    "sentence_transformers.*",
    "pytesseract.*",
    "optimum.*",
    "onnxruntime.*",
    "timm.*",
    "filetype.*",
    "pdfplumber.*",
    "docx.*",
    "openpyxl.*",
    "chardet.*",
    "pyarrow.*",
    "opentelemetry.*",
    "PIL.*",
    "gliner.*",
    "gliner",
    "datasets.*",
    "datasets",
    "setfit.*",
    "setfit",
    "litellm.*",
    "litellm",
    "pypdfium2.*",
    "pypdfium2",
    "sklearn.*",
    "sklearn",
    "numpy",
    "numpy.*",
    "tldextract",
    "tldextract.*",
    "re2",
    "re2.*",
    "faster_whisper",
    "faster_whisper.*",
    "pyiceberg.*",
    "deltalake.*",
    "duckdb.*",
    "confluent_kafka.*",
    "boto3.*",
    "botocore.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "src.detectors.*",
    "src.models.detectors.*",
    "src.sources.*",
    "src.pipeline.*",
    "src.utils.*",
    "src.outputs.*",
]

[[tool.mypy.overrides]]
module = [
    "src.models.generated_input",
    "src.models.generated_detectors",
    "src.models.generated_single_asset_scan_results",
    "scripts.*",
]
ignore_errors = true

[[tool.mypy.overrides]]
module = ["tests.*"]
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "src.detectors.*",
    "src.models.detectors.*",
    "src.sources.*",
    "src.pipeline.*",
    "src.utils.*",
    "src.outputs.*",
]
disable_error_code = ["call-arg", "assignment", "no-untyped-def", "no-untyped-call", "no-any-return", "union-attr", "attr-defined", "arg-type", "misc", "list-item", "comparison-overlap", "type-arg", "return-value", "dict-item", "unused-ignore", "index", "union-attr", "method-assign", "import-not-found", "import-untyped"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "integration: marks tests as integration tests (requires network access)",
    "e2e: marks tests as end-to-end tests (requires real APIs)",
]

[tool.uv]
package = true
# Every platform we ship (desktop bundles + CI) must resolve to versions with
# usable wheels. Without this, uv happily locks versions that are missing a
# platform — e.g. deltalake 1.6.1 published no win_amd64 wheel, which broke the
# Windows desktop venv bake ("can't be installed because it doesn't have a
# source distribution or wheel for the current platform").
required-environments = [
    "sys_platform == 'win32' and platform_machine == 'AMD64'",
    "sys_platform == 'darwin' and platform_machine == 'arm64'",
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
    "sys_platform == 'linux' and platform_machine == 'aarch64'",
]
